Fix overlap of sidebar & stubs column

--- a/public/bootstrap/css/wf.css
+++ b/public/bootstrap/css/wf.css
@@ -49,7 +49,7 @@ tr td {
 }
 
 #sidebar-container {
-width: 150px;
+width: 160px;
 position: absolute;
 top: 0;
 bottom: 0;
@@ -63,7 +63,7 @@ overflow: auto;
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 155px;
+    left: 160px;
     overflow: auto;
     border-right: 1px solid #eee;
     /*background-color: green;*/
@@ -100,7 +100,7 @@ position: absolute;
 top: 0px;
 right: 205px;
 bottom: 0;
-left: 360px;
+left: 365px;
 overflow: auto;
     /*background-color: yellow;*/
 }
